# eaglekit

./: .gitignore  README.md  README.md.backup  pyproject.toml
src/eaglekit/: __init__.py  cli.py  config.py  ek_wrapper.sh  router.py  wrapper.py
src_backup/eaglekit/: core.py  router.py
src_backup/eaglekit/templates/python_minimal/: README.md
