
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eaglekit"
version = "0.2.1"
description = "Eagle Kit — dev project manager CLI (ek) with setup, ignore helpers, and tasks router."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "You", email = "you@example.com"}]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "PyYAML>=6.0.1",
  "platformdirs>=4.2.0",
]

[project.scripts]
ek = "eaglekit.wrapper:main"
ek-core = "eaglekit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/eaglekit"]

[tool.hatch.build.targets.wheel.force-include]
"src/eaglekit/ek_wrapper.sh" = "eaglekit/ek_wrapper.sh"

[tool.ruff]
line-length = 100
